syntax = "proto3";

import "google/protobuf/timestamp.proto";

service Message {
  rpc StreamMessage (stream StreamRequest) returns (stream StreamResponse);
}

message StreamRequest {
  int32 room_id = 1;
  string username = 2;
  string message = 3;
}

message StreamResponse {
  string username = 2;
  string message = 3;
  google.protobuf.Timestamp sent_at = 4;
}